tests/expectations/compiler/dynamic_call/unknown_interface_fail.out
Error [ETYC0372005]: Unknown interface `test.aleo/Nonexistent`
    --> compiler-test:3:16
     |
   3 |         return Nonexistent@(target)/foo(1u32);
     |                ^^^^^^^^^^^
